--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,13 @@
     width: 700px;
     height: 400px;
     background-color: black;
-    display: none;
+    
 }
 
 .slide {
     width: 100%;
     height: 100%;
-
+    display: none;
 }
 
 .slide img {
@@ -23,6 +23,6 @@
     object-fit: cover;
 }
 
-.slide.active {
+.active {
     display: block;
 }
