--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,57 @@ button {
     position: absolute;
     border: none;
     background-color: transparent;
-    color: black;
+    color: white;
     top: 50%;
-    transform: translate(0, -50%); 
+    transform: translate(0, -50%);
+    font-size: 3rem;
+     
 }
 
 .next {
     right: 0;
+}
+
+.thumbnails {
+    width: 700px;
+    height: 100px;
+    background-color: black;
+    
+}
+
+.thumbnail {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    
+    
+}
+
+.thumbnail img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    display: block;
+    
+
+
+}
+ 
+
+
+.thumbnail::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background-color: black;
+    opacity: .5;
+}
+
+.thumbnail.active::after {
+    border: 1px solid white;
+    background-color: transparent;
 }
 
